[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["augustodomingos28 <augusto.domingos@unimedsc.coop.br>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.tests.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.30.0"
ruff = "^0.8.0"
pip-audit = "^2.7.3"


[tool.poetry.group.otel.dependencies]
opentelemetry-distro = "^0.49b2"
opentelemetry-exporter-otlp = "^1.28.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"


[tool.ruff]
line-length = 100
extend-exclude = ['migrations', '.venv']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_mode = "auto"

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
serve = 'opentelemetry-instrument'
otel-install = 'opentelemetry-bootstrap -a install'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
